fixing header z-index

--- a/assets/main.css
+++ b/assets/main.css
@@ -303,6 +303,9 @@ h3{
 	display: flex;
 	align-items: center;
 }
+header{
+	z-index: 2000;
+}
 .head.dark{
 	background-color:#1A1C1D;
 }
